Спринт 14. Техническое задание. Часть 2. До добавления полей последнего и предыдущего бронирования